--- a/local.conf
+++ b/local.conf
@@ -30,7 +30,7 @@ TMPDIR = "${TOPDIR}/tmp"
 #
 # The distribution setting controls which policy settings are used as defaults.
 #
-DISTRO ?= "grays"
+DISTRO ?= "rays"
 
 #
 # Package Management configuration
@@ -111,21 +111,21 @@ BB_NUMBER_THREADS = "10"
 PARALLEL_MAKE = "-j 10"
 INHERIT += "extrausers"
 EXTRA_USERS_PARAMS += "\
-     usermod -P Gr@yS*201249 root; \
-     useradd -P grays graysadmin;"
+     usermod -P R@yS*201249 root; \
+     useradd -P rays raysadmin;"
 INHERIT += "chageusers"
 CHAGE_USERS_PARAMS = "\
      chage -d0 root; \
-     chage -d0 graysadmin;"
+     chage -d0 raysadmin;"
 DISTRO_FEATURES_append = " systemd keyboard ldconfig pam"
-DISTRO_FEATURES_remove = "nfs alsa bluetooth pulseaudio nfc wayland vulkan"
+DISTRO_FEATURES_remove = "nfs alsa bluetooth pulseaudio nfc"
 EXTRA_IMAGE_FEATURES_append = " dev-pkgs package-management"
 CORE_IMAGE_EXTRA_INSTALL_append = " kernel-modules iptables suricata openssh sudo bash vim parted tcpdump ethtool \
-     dhcp-server dhcp-client apt mongodb wget gnupg"
+     dhcp-server dhcp-client apt mongodb wget gnupg mosquitto lua"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 VIRTUAL-RUNTIME_initscripts = ""
-IMAGE_FSTYPES = "ext4 iso wic wic.vmdk live"
+IMAGE_FSTYPES = "ext4 iso live"
 VOLATILE_LOG_DIR = "no"
 
 # Java
