--- a/bblayers.conf
+++ b/bblayers.conf
@@ -6,14 +6,14 @@ BBPATH = "${TOPDIR}"
 BBFILES ?= ""
 
 BBLAYERS ?= " \
-  /opt/grays-poky/meta \
-  /opt/grays-poky/meta-poky \
-  /opt/grays-poky/meta-yocto-bsp \
-  /opt/grays-poky/meta-openembedded/meta-oe \
-  /opt/grays-poky/meta-openembedded/meta-python \
-  /opt/grays-poky/meta-openembedded/meta-networking \
-  /opt/grays-poky/meta-openembedded/meta-perl \
-  /opt/grays-poky/meta-security \
-  /opt/grays-poky/meta-grays \
-  /opt/grays-poky/meta-grays/recipes-graylog/meta-java \
+  /opt/rays-poky/meta \
+  /opt/rays-poky/meta-poky \
+  /opt/rays-poky/meta-yocto-bsp \
+  /opt/rays-poky/meta-openembedded/meta-oe \
+  /opt/rays-poky/meta-openembedded/meta-python \
+  /opt/rays-poky/meta-openembedded/meta-networking \
+  /opt/rays-poky/meta-openembedded/meta-perl \
+  /opt/rays-poky/meta-security \
+  /opt/rays-poky/meta-rays \
+  /opt/rays-poky/meta-rays/recipes-graylog/meta-java \
   "
