--- a/local.conf
+++ b/local.conf
@@ -113,15 +113,15 @@ INHERIT += "extrausers"
 EXTRA_USERS_PARAMS += "\
      usermod -P R@yS*201249 root; \
      useradd -P rays raysadmin;"
-INHERIT += "chageusers"
-CHAGE_USERS_PARAMS = "\
-     chage -d0 root; \
-     chage -d0 raysadmin;"
+#INHERIT += "chageusers"
+#CHAGE_USERS_PARAMS = "\
+#     chage -d0 root; \
+#     chage -d0 graysadmin;"
 DISTRO_FEATURES_append = " systemd keyboard ldconfig pam"
-DISTRO_FEATURES_remove = "nfs alsa bluetooth pulseaudio nfc vulkan"
+DISTRO_FEATURES_remove = "nfs alsa bluetooth pulseaudio nfc wayland"
 EXTRA_IMAGE_FEATURES_append = " dev-pkgs package-management"
-CORE_IMAGE_EXTRA_INSTALL_append = " kernel-modules iptables suricata openssh sudo bash vim parted tcpdump ethtool \
-     dhcp-server dhcp-client apt mongodb wget gnupg mosquitto lua"
+CORE_IMAGE_EXTRA_INSTALL_append = " kernel-modules iptables suricata initscript openssh sudo bash vim parted tcpdump ethtool \
+     dhcp-server apt wget gnupg mosquitto lua tzdata mongodb elasticsearch graylog ranpwd"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 VIRTUAL-RUNTIME_initscripts = ""
