--- a/bblayers.conf
+++ b/bblayers.conf
@@ -13,6 +13,7 @@ BBLAYERS ?= " \
   /opt/rays-poky/meta-openembedded/meta-python \
   /opt/rays-poky/meta-openembedded/meta-networking \
   /opt/rays-poky/meta-openembedded/meta-perl \
+  /opt/grays-poky/meta-openembedded/meta-webserver \
   /opt/rays-poky/meta-security \
   /opt/rays-poky/meta-rays \
   /opt/rays-poky/meta-rays/recipes-graylog/meta-java \
