--- a/local.conf
+++ b/local.conf
@@ -120,8 +120,10 @@ EXTRA_USERS_PARAMS += "\
 DISTRO_FEATURES_append = " systemd keyboard ldconfig pam"
 DISTRO_FEATURES_remove = "nfs alsa bluetooth pulseaudio nfc wayland"
 EXTRA_IMAGE_FEATURES_append = " dev-pkgs package-management"
-CORE_IMAGE_EXTRA_INSTALL_append = " kernel-modules iptables suricata python3-suricata-update initscript openssh sudo bash vim parted tcpdump ethtool \
-     dhcp-server logrotate apt wget gnupg mosquitto lua tzdata mongodb elasticsearch graylog ranpwd nginx strongswan openvpn"
+CORE_IMAGE_EXTRA_INSTALL_append = " kernel-modules suricata python3 python3-suricata-update initscript openssh sudo bash vim parted \
+     tcpdump ethtool iptables libnetfilter-conntrack libnetfilter-cttimeout libnetfilter-queue libnetfilter-acct libnetfilter-cthelper \
+     libnetfilter-log libnfnetlink libnftnl conntrack-tools ebtables \
+     dhcp-server logrotate apt wget gnupg mosquitto lua tzdata mongodb elasticsearch graylog bridge-utils ranpwd nginx"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 VIRTUAL-RUNTIME_initscripts = ""
